--- a/covid19/index.html
+++ b/covid19/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Data Covid-19 Indonesia</title>
+    <!-- https://data.covid19.go.id/public/api/prov.json -->
+    <script>
+        const api_url = 'https://apicovid19indonesia-v2.vercel.app/api/indonesia/more';
+        async function getCovidData(){
+            const response = await fetch(api_url);
+            const data = await response.json();
+            console.log(data);
+            document.getElementById("tpositif").innerHTML = data.total.positif;
+            document.getElementById("tmeninggal").innerHTML = data.total.meninggal;
+            document.getElementById("tsembuh").innerHTML = data.total.sembuh;
+            document.getElementById("tdirawat").innerHTML = data.total.dirawat;
+            document.getElementById("apositif").innerHTML = data.penambahan.positif;
+            document.getElementById("ameninggal").innerHTML = data.penambahan.meninggal;
+            document.getElementById("asembuh").innerHTML = data.penambahan.sembuh;
+            document.getElementById("adirawat").innerHTML = data.penambahan.dirawat;
+            document.getElementById("update").innerHTML = new Date(data.total.lastUpdate);
+        }
+        getCovidData();
+    </script>
 </head>
 <body>
-    
+    <h1>Data Covid-19 di Indonesia</h1>
+    <p>Positif</p>
+    <p id="tpositif"></p>
+    <p id="apositif"></p>
+    <p>Sembuh</p>
+    <p id="tsembuh"></p>
+    <p id="asembuh"></p>
+    <p>Meninggal</p>
+    <p id="tmeninggal"></p>
+    <p id="ameninggal"></p>
+    <p>Dirawat</p>
+    <p id="tdirawat"></p>
+    <p id="adirawat"></p>
+    <p>Last Update</p>
+    <p id="update"></p>
+
+    <p>Sumber API dari <a href="https://apicovid19indonesia-v2.vercel.app">sini</a> yang dikembangkan dan diolah di <a href="https://github.com/Reynadi531/api-covid19-indonesia-v2">Github</a></p>
 </body>
 </html>
