--- a/covid19/index.html
+++ b/covid19/index.html
@@ -1,47 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Data Covid-19 Indonesia</title>
-    <!-- https://data.covid19.go.id/public/api/prov.json -->
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+    <!-- Nucleo Icons -->
+    <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <!-- CSS Files -->
+    <link id="pagestyle" href="../assets/css/material-dashboard.css?v=3.0.1" rel="stylesheet" />
+    <script language="JavaScript" src="https://rhashemian.github.io/js/NumberFormat.js"></script>
     <script>
         const api_url = 'https://apicovid19indonesia-v2.vercel.app/api/indonesia/more';
         async function getCovidData(){
             const response = await fetch(api_url);
             const data = await response.json();
-            console.log(data);
-            document.getElementById("tpositif").innerHTML = data.total.positif;
-            document.getElementById("tmeninggal").innerHTML = data.total.meninggal;
-            document.getElementById("tsembuh").innerHTML = data.total.sembuh;
-            document.getElementById("tdirawat").innerHTML = data.total.dirawat;
-            document.getElementById("apositif").innerHTML = data.penambahan.positif;
-            document.getElementById("ameninggal").innerHTML = data.penambahan.meninggal;
-            document.getElementById("asembuh").innerHTML = data.penambahan.sembuh;
-            document.getElementById("adirawat").innerHTML = data.penambahan.dirawat;
-            document.getElementById("update").innerHTML = new Date(data.total.lastUpdate);
+            const d = new Date(data.total.lastUpdate);
+            const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+            document.getElementById("tpositif").innerHTML = FormatNumberBy3(data.total.positif, ",", ".");
+            document.getElementById("tmeninggal").innerHTML = FormatNumberBy3(data.total.meninggal, ",", ".");
+            document.getElementById("tsembuh").innerHTML = FormatNumberBy3(data.total.sembuh, ",", ".");
+            document.getElementById("tdirawat").innerHTML = FormatNumberBy3(data.total.dirawat, ",", ".");
+            document.getElementById("apositif").innerHTML = FormatNumberBy3(data.penambahan.positif, ",", ".");
+            document.getElementById("ameninggal").innerHTML = FormatNumberBy3(data.penambahan.meninggal, ",", ".");
+            document.getElementById("asembuh").innerHTML = FormatNumberBy3(data.penambahan.sembuh, ",", ".");
+            document.getElementById("adirawat").innerHTML = FormatNumberBy3(data.penambahan.dirawat, ",", ".");
+            document.getElementById("update").innerHTML = d.getDate() + " " + months[d.getMonth()] + " " + d.getFullYear() + " " + d.getHours() + ":" + d.getMinutes();
         }
         getCovidData();
     </script>
 </head>
 <body>
-    <h1>Data Covid-19 di Indonesia</h1>
-    <p>Positif</p>
-    <p id="tpositif"></p>
-    <p id="apositif"></p>
-    <p>Sembuh</p>
-    <p id="tsembuh"></p>
-    <p id="asembuh"></p>
-    <p>Meninggal</p>
-    <p id="tmeninggal"></p>
-    <p id="ameninggal"></p>
-    <p>Dirawat</p>
-    <p id="tdirawat"></p>
-    <p id="adirawat"></p>
-    <p>Last Update</p>
-    <p id="update"></p>
-
-    <p>Sumber API dari <a href="https://apicovid19indonesia-v2.vercel.app">sini</a> yang dikembangkan dan diolah di <a href="https://github.com/Reynadi531/api-covid19-indonesia-v2">Github</a></p>
+    <div class="container-fluid py-4">
+        <h1>Data Covid-19 di Indonesia</h1>
+    </div>
+    <div class="container-fluid py-4">
+        <div class="row">
+          <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+              <div class="card-header p-3 pt-2">
+                <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">weekend</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Total Positif</p>
+                  <h4 class="mb-0" id="tpositif"></h4>
+                </div>
+              </div>
+              <hr class="dark horizontal my-0">
+              <div class="card-footer p-3">
+                <p class="mb-0"><span class="text-success text-sm font-weight-bolder" id="apositif"></span> dari hari kemarin</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+              <div class="card-header p-3 pt-2">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Total Meninggal</p>
+                  <h4 class="mb-0" id="tmeninggal"></h4>
+                </div>
+              </div>
+              <hr class="dark horizontal my-0">
+              <div class="card-footer p-3">
+                <p class="mb-0"><span class="text-success text-sm font-weight-bolder" id="ameninggal"></span> dari hari kemarin</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="card">
+              <div class="card-header p-3 pt-2">
+                <div class="icon icon-lg icon-shape bg-gradient-success shadow-success text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Sembuh</p>
+                  <h4 class="mb-0" id="tsembuh"></h4>
+                </div>
+              </div>
+              <hr class="dark horizontal my-0">
+              <div class="card-footer p-3">
+                <p class="mb-0"><span class="text-success text-sm font-weight-bolder" id="asembuh"></span> dari hari kemarin</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-sm-6">
+            <div class="card">
+              <div class="card-header p-3 pt-2">
+                <div class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">weekend</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Dirawat</p>
+                  <h4 class="mb-0" id="tdirawat"></h4>
+                </div>
+              </div>
+              <hr class="dark horizontal my-0">
+              <div class="card-footer p-3">
+                <p class="mb-0"><span class="text-success text-sm font-weight-bolder" id="adirawat"></span> dari hari kemarin</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="container-fluid py-4">
+        <p>Last Update : <span id="update"></span></p>
+        <p>Sumber API dari <a href="https://apicovid19indonesia-v2.vercel.app">sini</a> yang dikembangkan dan diolah di <a href="https://github.com/Reynadi531/api-covid19-indonesia-v2">Github</a></p>
+    </div>
+    <div class="fixed-plugin">
+        <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
+            <i class="material-icons py-2">settings</i>
+        </a>
+        <div class="card shadow-lg">
+            <div class="card-header pb-0 pt-3">
+            <div class="float-start">
+                <h5 class="mt-3 mb-0">Pengaturan Tema</h5>
+            </div>
+            <div class="float-end mt-4">
+                <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
+                <i class="material-icons">clear</i>
+                </button>
+            </div>
+            <!-- End Toggle Button -->
+            </div>
+            <hr class="horizontal dark my-1">
+            <div class="card-body pt-sm-3 pt-0">
+            <div class="mt-2 d-flex">
+                <h6 class="mb-0">Terang / Gelap</h6>
+                <div class="form-check form-switch ps-0 ms-auto my-auto">
+                <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--   Core JS Files   -->
+    <script src="../assets/js/core/popper.min.js"></script>
+    <script src="../assets/js/core/bootstrap.min.js"></script>
+    <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
+    <script src="../assets/js/plugins/smooth-scrollbar.min.js"></script>
+    <script src="../assets/js/plugins/chartjs.min.js"></script>
+    <!-- Github buttons -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="../assets/js/material-dashboard.min.js?v=3.0.1"></script>
 </body>
 </html>
